fix: make code block wrap text automatically

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,8 +133,12 @@ pre {
   background: var(--color-bg-alt);
   border: 1px solid var(--color-border);
   padding: calc(var(--lh) / 2);
-  overflow: auto;
   border-radius: 3px;
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap; /* Mozilla */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 pre ::selection {
